--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for @post do |f|%>
-<%= f.text_filed: title %>
-<%= f.text_area: context %>
-<%= f.number_field: status%>
+<%= f.text_field :title %>
+<%= f.text_area :context %>
+<%= f.number_field :status%>
+<%= f.submit 'Create a new Post'%>
 <% end %>
