--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for @post do |f|%>
 <%= f.text_field :title %>
 <%= f.text_area :context %>
-<%= f.number_field :status%>
+<%= f.select(:status, Post.statuses.keys) %>
+<%= options_for_select([['Draft', 0], ['Published', 1], ['Private', 2]]) %>
 <%= f.submit 'Create a new Post'%>
 <% end %>
