--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,5 +3,5 @@
 <%= f.text_area :context %>
 <%= f.text_field :category %>
 <%= f.select(:status, Post.statuses.keys) %>
-<%= f.submit 'Create a new Post'%>
+<%= f.submit %>
 <% end %>
