--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,9 @@
 <% @posts.each do |post| %>
 <%= post.title %>
 <%= post.context %>
+<%= post.category %>
 <%= humanize(post.status) %>
+<%= link_to 'Edit', edit_post_path(post) %>
+<%= link_to 'Delete',post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
 <%=link_to 'New', new_post_path%>
