--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,6 @@
 <h1>Hello World</h1>
 <% @posts.each do |post| %>
-<%= post.title %>
-<%= qiita_markdown(post.context) %>
+<%= link_to post.title, post_path(post) %>
 <%= post.category %>
 <%= humanize(post.status) %>
 <%= link_to 'Edit', edit_post_path(post) %>
