--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Hello World</h1>
+<% if user_signed_in? %>
+<%= link_to 'Logout as admin', destroy_user_session_path, method: :delete %>
+<% end %>
 <% @posts.each do |post| %>
 <%= link_to post.title, post_path(post) %>
 <%= post.category %>
