--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,19 @@
   </head>
 
   <body>
+    <nav class="navbar fixed-top">
+      <h3 class="navbar-brand">My Blog</h3>
+        <ul class="link-list">
+          <li class = 'nav-item'><%= link_to 'Home', root_path %></li>
+          <% if user_signed_in? %>
+            <li class = 'nav-item'><%= link_to 'Logout as admin', destroy_user_session_path, method: :delete %></li>
+          <% end %>
+          <li class = 'nav-item'><%=link_to 'New', new_post_path%></li>
+          <!-- <li class = 'nav-item'><Link to = '/About' >About</Link></li> -->
+          <!-- <li class = 'nav-item'><Link to = '/Contact' >Contact</Link></li> -->
+        </ul>
+    </nav>
     <%= yield %>
+    <footer></footer>
   </body>
 </html>
