--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,6 @@
-<h1>Show Page</h1>
-<h2><%= @post.title %></h2>
-<%= qiita_markdown(@post.context) %>
+<div class="container">
+  <h2><%= @post.title %></h2>
+    <div class="col-lg-11">
+      <%= qiita_markdown(@post.context) %>
+    </div>
+ </div>
