--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,6 +2,7 @@
 <%= f.text_field :title %>
 <%= f.text_area :context , cols: "30", rows: "30"%>
 <%= f.text_field :category %>
+<%= f.text_field :image %>
 <%= f.select(:status, Post.statuses.keys) %>
 <%= f.submit %>
 <% end %>
