--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,8 +2,17 @@
   <div class = 'row'>
     <div class="col-md-8">
       <% @posts.each do |post| %>
-        <%= link_to post.title, post_path(post) %>
-        <%= post.category %>
+        <article>
+          <h1 class="mt-4"><%= link_to post.title, post_path(post) %></h1>
+            <h6 class="lead">
+              by  <Link to = '/About'>K-Sato</Link>
+            </h6>
+          <hr/>
+            <p>Posted on <%= post.created_at.strftime("%B %d, %Y") %> <span class = 'tag'><%= post.category %></span></p>
+          <hr/>
+            <img style="background-image: url(<%= post.image%>);" class="img-fluid rounded" id = 'show-img'/>
+          <hr/>
+        </article>
         <%= humanize(post.status) %>
         <%= link_to 'Edit', edit_post_path(post) %>
         <%= link_to 'Delete',post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
