--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
  @import "highlight";
  @import "bootstrap";
  @import "navbar";
- @import "container";
  @import "footer";
  @import "show";
+ @import "postbox";
+ @import "side";
