--- a/app/assets/stylesheets/_postbox.scss
+++ b/app/assets/stylesheets/_postbox.scss
@@ -1,16 +1,3 @@
-@import "global";
-
-.container {
-  margin-top: 90px;
-}
-.PostBox {
-  margin: 0 auto;
-  margin-bottom: 20px;
-  height: 30%;
-  width: 60%;
-  background-color: #fff;
-  border: solid 1px $p-color;
-}
 #post-box {
   .card-body {
     text-align: center;
@@ -23,5 +10,12 @@
   }
   .card-footer {
     background-color: #fff;
+  }
+  .post-top{
+    width: 100%;
+    height: 450px;
+    background-position: center;
+    background-size: cover;
+    border-bottom: solid 1px #E0E0E0;
   }
 }
