--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -1,22 +1,7 @@
-.badge{
-  margin-left: 20px;
-  padding: 3px 20px 3px 20px;
+#show-img{
+  width: 100%;
+  height: 450px;
+  background-position: center;
+  background-size: cover;
+  border-bottom: solid 1px #E0E0E0;
 }
-.tag{
-  margin-left: 20px;
-}
-
-.s-container {
-  background-color: #f2f2f2;
-}
-
-// .c-container {
-//   background-color: #394548;
-//   color: #E2E2E2;
-// }
-// .comment-section {
-//   margin-top: 30px;
-// }
-// #comment {
-//   margin: 30px;
-// }
