--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,9 @@
           <!-- <li class = 'nav-item'><Link to = '/Contact' >Contact</Link></li> -->
         </ul>
     </nav>
-    <%= yield %>
+    <div class = 'container'>
+      <%= yield %>
+    </div>
     <footer></footer>
   </body>
 </html>
