--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,28 +1,23 @@
-<div class = 'container'>
-  <div class = 'row'>
+<div class = 'row'>
     <div class="col-md-8">
       <% @posts.each do |post| %>
-        <article>
-          <h1 class="mt-4"><%= link_to post.title, post_path(post) %></h1>
-            <h6 class="lead">
-              by  <Link to = '/About'>K-Sato</Link>
-            </h6>
-          <hr/>
-            <p>Posted on <%= post.created_at.strftime("%B %d, %Y") %> <span class = 'tag'><%= post.category %></span></p>
-          <hr/>
-            <img style="background-image: url(<%= post.image%>);" class="img-fluid rounded" id = 'show-img'/>
-          <hr/>
-        </article>
-        <%= humanize(post.status) %>
-        <%= link_to 'Edit', edit_post_path(post) %>
-        <%= link_to 'Delete',post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
+        <div class = 'card mb-4' id = 'post-box'>
+          <div class = 'post-top' style="background-image: url(<%= post.image%>);"></div>
+            <div class="card-body">
+              <h3  class="card-title"><%= post.title %></h3>
+                <%= link_to 'Read More', post_path(post), class:"btn btn-outline-primary"%>
+            </div>
+            <div class="card-footer">
+                <%= post.category %>
+                <%= humanize(post.status) %>
+                <%= link_to 'Edit', edit_post_path(post) %>
+                <%= link_to 'Delete',post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
+              <span>Posted on <%= post.created_at.strftime("%B %d, %Y") %> by K-Sato</span>
+            </div>
+        </div>
       <% end %>
     </div>
     <div class="col-md-4">
-      <!-- <Side searchHandler = {this.searchHandler} term = {this.state.term}/> -->
+      <%= render 'side' %>
     </div>
-  </div>
-  <!-- <ul id="page-numbers">
-    {renderPageNumbers}
-  </ul> -->
 </div>
