--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,9 @@
-<div class="container">
-  <h2><%= @post.title %></h2>
-    <div class="col-lg-11">
-      <%= qiita_markdown(@post.context) %>
-    </div>
- </div>
+<article>
+ <h1 class="mt-4"><%=@post.title%></h1>
+ <hr/>
+   <p>Posted on <%= @post.created_at.strftime("%B %d, %Y") %> <span class = 'tag'><%= @post.category %></span></p>
+ <hr/>
+   <div style="background-image: url(<%= @post.image%>);" class="img-fluid rounded" id = 'show-img'></div>
+ <hr/>
+     <%= qiita_markdown(@post.context) %>
+</article>
