put _global.scss below bootstrap

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -2,10 +2,9 @@ $p-color: #E0E0E0;
 $p2-color: #EEEEEE;
 $h-color: #444;
 $a-color: #666;
-body {
-  font-family: "Oswald", Helvetica, Arial, sans-serif!important;
+body{
+  font-family: Arial, Helvetica, sans-serif;
 }
-
 h1 {
   color: $h-color;
 }
