--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,8 +13,9 @@
  // *= require_tree .
  *= require_self
  */
- @import "highlight";
  @import "bootstrap";
+ @import "highlight";
+ @import "global";
  @import "navbar";
  @import "footer";
  @import "show";
