Added a search bar and user profile

--- a/app/views/posts/_side.html.erb
+++ b/app/views/posts/_side.html.erb
@@ -1,2 +1,9 @@
 <div class="side">
+  <%= render 'author' %>
+  <div class="card my-4" id = "search-box">
+    <h5 class="card-header" id = 'search-header'>Search</h5>
+    <div class="card-body">
+      <input type = 'text' name = 'term' class = 'form-control' placeholder = 'Search'/>
+    </div>
+  </div>
 </div>
