--- a/app/views/posts/_side.html.erb
+++ b/app/views/posts/_side.html.erb
@@ -3,7 +3,9 @@
   <div class="card my-4" id = "search-box">
     <h5 class="card-header" id = 'search-header'>Search</h5>
     <div class="card-body">
-      <input type = 'text' name = 'term' class = 'form-control' placeholder = 'Search'/>
+      <%= search_form_for @q do |f| %>
+        <%= f.search_field :title_cont, class:'form-control', placeholder:'Search' %>
+      <% end %>
     </div>
   </div>
 </div>
