--- a/app/views/posts/_side.html.erb
+++ b/app/views/posts/_side.html.erb
@@ -3,8 +3,8 @@
   <div class="card my-4" id = "search-box">
     <h5 class="card-header" id = 'search-header'>Search</h5>
     <div class="card-body">
-      <%= search_form_for @q do |f| %>
-        <%= f.search_field :title_cont, class:'form-control', placeholder:'Search' %>
+      <%= form_tag(posts_path, method: :get) do %>
+        <%= text_field_tag :title, params[:title],class:'form-control', placeholder:'Search' %>
       <% end %>
     </div>
   </div>
