--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for @post do |f|%>
 <%= f.text_field :title, placeholder:'Title'%>
 <%= f.text_area :context , cols: "30", rows: "30", placeholder:'Context'%>
-<%= f.text_field :category ,placeholder:'Category'%>
 <%= f.text_field :image, placeholder:'Image' %>
+<%= f.collection_select :category_name, Category.all, :name, :name %>
 <%= f.select(:status, Post.statuses.keys) %>
 <%= f.submit %>
 <% end %>
