--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,7 +2,12 @@
 <%= f.text_field :title, placeholder:'Title'%>
 <%= f.text_area :context , cols: "30", rows: "30", placeholder:'Context'%>
 <%= f.text_field :image, placeholder:'Image' %>
-<%= f.collection_select :category_name, Category.all, :name, :name %>
+<%= f.text_field :category_name, list: "categories_autocomplete" %>
+  <datalist id="categories_autocomplete">
+    <% Category.all.each do |category| %>
+      <option value="<%= category.name %>">
+    <% end %>
+  </datalist>
 <%= f.select(:status, Post.statuses.keys) %>
 <%= f.submit %>
 <% end %>
