--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,7 +12,7 @@
                     <%= link_to 'Read More', post_path(post), class:"btn btn-outline-primary"%>
                 </div>
                 <div class="card-footer">
-                    <%= post.category %>
+                    <%= post.category_name %>
                     <%= humanize(post.status) %>
                     <%= link_to 'Edit', edit_post_path(post) %>
                     <%= link_to 'Delete',post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
