--- a/app/views/posts/_side.html.erb
+++ b/app/views/posts/_side.html.erb
@@ -9,6 +9,6 @@
     </div>
   </div>
   <% @categories.each do |category| %>
-   <%= link_to category.name, posts_path(category: category.name) %>
+   <%= link_to category.name, posts_path(category: category.id) %>
   <% end %>
 </div>
