--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @post do |f|%>
+<%= form_for [:admin, @post] do |f|%>
 <%= f.text_field :title, placeholder:'Title'%>
 <%= f.text_area :context , cols: "30", rows: "30", placeholder:'Context'%>
 <%= f.text_field :image, placeholder:'Image' %>
