--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
           <% if user_signed_in? %>
             <li class = 'nav-item'><%= link_to 'Logout as admin', destroy_user_session_path, method: :delete %></li>
           <% end %>
-          <li class = 'nav-item'><%=link_to 'New', new_post_path%></li>
+          <li class = 'nav-item'><%=link_to 'New', new_admin_post_path%></li>
           <!-- <li class = 'nav-item'><Link to = '/About' >About</Link></li> -->
           <!-- <li class = 'nav-item'><Link to = '/Contact' >Contact</Link></li> -->
         </ul>
