--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,8 +14,8 @@
                 <div class="card-footer">
                     <%= post.category_name %>
                     <%= humanize(post.status) %>
-                    <%= link_to 'Edit', edit_post_path(post) %>
-                    <%= link_to 'Delete',post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
+                    <%= link_to 'Edit', edit_admin_post_path(post) %>
+                    <%= link_to 'Delete',admin_post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
                   <span>Posted on <%= post.created_at.strftime("%B %d, %Y") %> by K-Sato</span>
               </div>
             </div>
