--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,6 +19,7 @@
           <% end %>
         <% end %>
       <% end %>
+      <%= paginate @posts %>
     </div>
     <div class="col-md-4">
       <%= render 'side' %>
