--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -7,3 +7,30 @@
 <%= link_to 'Delete',admin_post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
 Posted on <%= post.created_at.strftime("%B %d, %Y") %>
 <% end %>
+
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Title</th>
+      <th scope="col">Status</th>
+      <th scope="col">Category</th>
+      <th scope = 'col'>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @posts.each do |post| %>
+    <tr>
+      <td><%= post.id %></td>
+      <td><%= link_to post.title, post_path(post) %></td>
+      <td><%= humanize(post.status) %></td>
+      <td><%= post.category_name %></td>
+      <td>
+        <%= link_to 'Edit', edit_admin_post_path(post) %>
+        <%= link_to 'Delete',admin_post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
+      </td>
+    </tr>
+
+    <% end %>
+  </tbody>
+</table>
