--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -1,1 +1,6 @@
-<%= render 'form' %>
+<div class="card my-4">
+  <h5 class="card-header">New Post</h5>
+  <div class="card-body">
+    <%= render 'form' %>
+  </div>
+</div>
