--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Edit Page</h1>
-<%= render 'form' %>
+<div class="card my-4">
+  <h5 class="card-header">Editing Form</h5>
+  <div class="card-body">
+    <%= render 'form' %>
+  </div>
+</div>
