--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,27 +1,30 @@
-<div class = 'row'>
-    <div class="col-md-8">
-      <% if (@posts) %>
-        <% if (@posts.empty?) %>
-            <h3>No posts found.</h3>
-          <% else %>
-          <% @posts.each do |post| %>
-            <div class = 'card mb-4' id = 'post-box'>
-                <div class = 'post-top' style="background-image: url(<%= post.image%>);"></div>
-                <div class="card-body">
-                  <h3  class="card-title"><%= post.title %></h3>
-                    <%= link_to 'Read More', post_path(post), class:"btn btn-outline-primary"%>
+<%= render 'nav' %>
+<div class = 'container'>
+  <div class = 'row'>
+      <div class="col-md-8">
+        <% if (@posts) %>
+          <% if (@posts.empty?) %>
+              <h3>No posts found.</h3>
+            <% else %>
+            <% @posts.each do |post| %>
+              <div class = 'card mb-4' id = 'post-box'>
+                  <div class = 'post-top' style="background-image: url(<%= post.image%>);"></div>
+                  <div class="card-body">
+                    <h3  class="card-title"><%= post.title %></h3>
+                      <%= link_to 'Read More', post_path(post), class:"btn btn-outline-primary"%>
+                  </div>
+                  <div class="card-footer">
+                      <%= post.category_name %>
+                      <span>Posted on <%= post.created_at.strftime("%B %d, %Y") %> by K-Sato</span>
                 </div>
-                <div class="card-footer">
-                    <%= post.category_name %>
-                    <span>Posted on <%= post.created_at.strftime("%B %d, %Y") %> by K-Sato</span>
               </div>
-            </div>
+            <% end %>
           <% end %>
         <% end %>
-      <% end %>
-      <%= paginate @posts %>
-    </div>
-    <div class="col-md-4">
-      <%= render 'side' %>
-    </div>
+        <%= paginate @posts %>
+      </div>
+      <div class="col-md-4">
+        <%= render 'side' %>
+      </div>
+  </div>
 </div>
