--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
-<article>
+<%= render 'nav' %>
+<article class = 'container'>
  <h1 class="mt-4"><%=@post.title%></h1>
  <hr/>
    <p>Posted on <%= @post.created_at.strftime("%B %d, %Y") %> <span class = 'tag'><%= @post.category_name %></span></p>
