--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -1,6 +1,9 @@
-<div class="card my-4">
-  <h5 class="card-header">Editing Form</h5>
-  <div class="card-body">
-    <%= render 'form' %>
+<%= render 'nav' %>
+<div class = 'form-container'>
+  <div class="card my-4">
+    <h5 class="card-header">Editing Form</h5>
+    <div class="card-body">
+      <%= render 'form' %>
+    </div>
   </div>
 </div>
