--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'nav' %>
 <div class = 'container'>
   <% flash.each do |key, value| %>
     <div class = "alert alert-<%= key %>"><%= value%></div>
