--- a/app/views/admin/posts/_nav.html.erb
+++ b/app/views/admin/posts/_nav.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar fixed-top">
-  <h3 class="navbar-brand">Admin Page</h3>
+<nav class="admin-navbar fixed-top">
+  <h4 class="admin-navbar-brand">Admin Page</h4>
     <ul class="link-list">
       <li class = 'nav-item'><%= link_to 'Home', root_path %></li>
       <li class = 'nav-item'><%= link_to 'Admin Home', admin_posts_path %></li>
