--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -7,11 +7,19 @@
 <div class = 'admin-container'>
   <div class = 'row'>
     <!-- SideBar -->
-    <div class="col-md-2 admin-wrapper">
-      <div class = 'admin-sidebar'></div>
+    <div class="col-md-2 admin-wrapper" id = 'admin-wrapper'>
+      <div id = 'admin-sidebar'>
+        <!-- Sidebar-list -->
+        <ul class="sidebar-nav">
+          <li><%= link_to 'Home', root_path %></li>
+          <% if user_signed_in? %>
+            <li><%= link_to 'Logout as admin', destroy_user_session_path, method: :delete %></li>
+          <% end %>
+          <li><%=link_to 'New', new_admin_post_path%></li>
+      </div>
     </div>
     <!-- Content -->
-    <div class="col-md-10 content">
+    <div class="col-md-10 admin-content" id = 'admin-content'>
       <!-- Table -->
       <table class="table table-striped table-hover">
         <thead>
@@ -46,3 +54,29 @@
     </div>
   </div>
 </div>
+
+<script>
+let sidebar = document.getElementById('admin-sidebar')
+let adminWrapper = document.getElementById('admin-wrapper')
+let adminContent = document.getElementById('admin-content')
+
+function openNav(){
+  sidebar.style.width = '200px';
+  adminWrapper.className = 'col-md-2 admin-wrapper';
+  adminContent.className = 'col-md-10 admin-content';
+}
+
+function closeNav(){
+  sidebar.style.width = '0px';
+  adminWrapper.className = 'col-md-0 admin-wrapper';
+  adminContent.className = 'col-md-12 admin-content';
+}
+
+function toggleNav(){
+  if(sidebar.style.width === '0px'){
+    openNav()
+  }else{
+    closeNav()
+  }
+}
+</script>
