--- a/app/assets/stylesheets/_admin.scss
+++ b/app/assets/stylesheets/_admin.scss
@@ -1,7 +1,8 @@
 @import "global";
 @import "navbar";
 
-.admin-sidebar {
+#admin-sidebar {
+  z-index: 1;
    position: fixed;
    width: 200px;
    height: 100%;
@@ -10,20 +11,83 @@
    overflow:hidden;
    background-color: #212529;
    border-right: solid 1px #efefef;
+   -webkit-transition: all 0.5s ease;
+   -moz-transition: all 0.5s ease;
+   -o-transition: all 0.5s ease;
+   transition: all 0.5s ease;
 }
 .admin-container {
   margin-top: 80px;
   height: 100%;
   width: 100%;
-  border: solid 1px;
-  .content {
+  border: solid 4px;
+  .admin-content {
+    border: solid 1px;
   }
 }
 
+//Navbar
 .admin-navbar {
   @extend .navbar;
    .admin-navbar-brand {
      margin: 15px;
      float: left;
    }
+}
+#menu-icon {
+  position: absolute;
+  top: 20px;
+  left: 170px;
+  .menu-icon-bar {
+    width: 25px;
+    height: 3px;
+    background-color: $h-color;
+    margin: 3px 0;
+    border-radius: 5px;
+  }
+}
+//Sidebar
+.sidebar-nav {
+  position: absolute;
+  top: 80px;
+  width: 250px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.sidebar-nav li {
+  text-indent: 20px;
+  line-height: 40px;
+}
+
+.sidebar-nav li a {
+  display: block;
+  text-decoration: none;
+  color: #999999;
+}
+
+.sidebar-nav li a:hover {
+  text-decoration: none;
+  color: #fff;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.sidebar-nav li a:active, .sidebar-nav li a:focus {
+  text-decoration: none;
+}
+
+.sidebar-nav>.sidebar-brand {
+  height: 65px;
+  font-size: 18px;
+  line-height: 60px;
+}
+
+.sidebar-nav>.sidebar-brand a {
+  color: #999999;
+}
+
+.sidebar-nav>.sidebar-brand a:hover {
+  color: #fff;
+  background: none;
 }
