--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -1,9 +1,4 @@
-<%= render 'nav' %>
+<%= render 'nav_form' %>
 <div class = 'form-container'>
-  <div class="card my-4">
-    <h5 class="card-header">New Post</h5>
-    <div class="card-body">
-      <%= render 'form' %>
-    </div>
-  </div>
+   <%= render 'form' %>
 </div>
