--- a/app/assets/stylesheets/_admin.scss
+++ b/app/assets/stylesheets/_admin.scss
@@ -2,7 +2,7 @@
 @import "navbar";
 
 #admin-sidebar {
-  z-index: 1;
+   z-index: 1;
    position: fixed;
    width: 200px;
    height: 100%;
@@ -20,9 +20,9 @@
   margin-top: 80px;
   height: 100%;
   width: 100%;
-  border: solid 4px;
+  // border: solid 4px;
   .admin-content {
-    border: solid 1px;
+    // border: solid 1px;
   }
 }
 
@@ -31,21 +31,28 @@
   @extend .navbar;
    .admin-navbar-brand {
      margin: 15px;
+     margin-top: 22px;
+     color: $h-color;
      float: left;
    }
+   .admin-navbar-brand:hover{
+     text-decoration: none;
+   }
+   #menu-icon {
+     position: absolute;
+     cursor: pointer;
+     top: 20px;
+     left: 170px;
+     .menu-icon-bar {
+       width: 25px;
+       height: 3px;
+       background-color: $h-color;
+       margin: 3px 0;
+       border-radius: 5px;
+     }
+   }
 }
-#menu-icon {
-  position: absolute;
-  top: 20px;
-  left: 170px;
-  .menu-icon-bar {
-    width: 25px;
-    height: 3px;
-    background-color: $h-color;
-    margin: 3px 0;
-    border-radius: 5px;
-  }
-}
+
 //Sidebar
 .sidebar-nav {
   position: absolute;
