--- a/app/views/admin/posts/_nav.html.erb
+++ b/app/views/admin/posts/_nav.html.erb
@@ -1,17 +1,12 @@
 <nav class="admin-navbar fixed-top">
-  <h4 class="admin-navbar-brand">Admin Page
+  <h4><%= link_to 'Admin Page', admin_posts_path, class:'admin-navbar-brand' %>
     <div id="menu-icon" onClick = 'toggleNav()'>
       <div class="menu-icon-bar"></div>
       <div class="menu-icon-bar"></div>
       <div class="menu-icon-bar"></div>
     </div>
   </h4>
-    <ul class="link-list">
-      <li class = 'nav-item'><%= link_to 'Home', root_path %></li>
-      <li class = 'nav-item'><%= link_to 'Admin Home', admin_posts_path %></li>
-      <li class = 'nav-item'><%=link_to 'New', new_admin_post_path%></li>
       <% if user_signed_in? %>
-        <li class = 'nav-item'><%= link_to 'Logout as admin', destroy_user_session_path, method: :delete %></li>
+        <%= link_to 'New post', new_admin_post_path, class: 'btn btn-outline-success'%>
       <% end %>
-    </ul>
 </nav>
