--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'nav' %>
-
+  <!-- Flash messages -->
   <% flash.each do |key, value| %>
     <div class = "alert alert-<%= key %>"><%= value%></div>
   <% end %>
@@ -11,11 +11,12 @@
       <div id = 'admin-sidebar'>
         <!-- Sidebar-list -->
         <ul class="sidebar-nav">
-          <li><%= link_to 'Home', root_path %></li>
+          <li class = 'nav-item'><%= link_to 'Admin Home', admin_posts_path %></li>
+          <li><%= link_to 'Blog Home', root_path %></li>
+          <li><%=link_to 'New Post', new_admin_post_path%></li>
           <% if user_signed_in? %>
             <li><%= link_to 'Logout as admin', destroy_user_session_path, method: :delete %></li>
           <% end %>
-          <li><%=link_to 'New', new_admin_post_path%></li>
       </div>
     </div>
     <!-- Content -->
