--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -4,7 +4,7 @@
     <div class = "alert alert-<%= key %>"><%= value%></div>
   <% end %>
 
-<div class = 'admin-container'>
+<div class = 'admin-container' id = 'admin-container'>
   <div class = 'row'>
     <!-- SideBar -->
     <div class="col-md-2 admin-wrapper" id = 'admin-wrapper'>
@@ -20,14 +20,28 @@
       </div>
     </div>
     <!-- Content -->
-    <div class="col-md-10 admin-content" id = 'admin-content'>
+    <div class="col-md-11 admin-content" id = 'admin-content'>
+      <!-- Tab -->
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
       <!-- Table -->
-      <table class="table table-striped table-hover">
+      <table class="table table-striped table-hover posts-table">
         <thead>
           <tr>
             <th scope="col">ID</th>
             <th scope="col">Title</th>
-            <th scope="col">Status</th>
             <th scope="col">Category</th>
             <th scope="col">Posted on</th>
             <th scope="col">Last updated on</th>
@@ -39,7 +53,6 @@
           <tr>
             <td><%= post.id %></td>
             <td><%= link_to post.title, post_path(post) %></td>
-            <td><%= humanize(post.status) %></td>
             <td><%= post.category_name %></td>
             <td><%= post.created_at.strftime("%Y/%m/%d") %></td>
             <td><%= post.updated_at.strftime("%Y/%m/%d") %></td>
@@ -60,17 +73,20 @@
 let sidebar = document.getElementById('admin-sidebar')
 let adminWrapper = document.getElementById('admin-wrapper')
 let adminContent = document.getElementById('admin-content')
+let adminContainer = document.getElementById('admin-container')
 
 function openNav(){
   sidebar.style.width = '200px';
   adminWrapper.className = 'col-md-2 admin-wrapper';
-  adminContent.className = 'col-md-10 admin-content';
+  adminContent.className = 'col-md-11 admin-content';
+  adminContainer.style.paddingLeft = '250px'
 }
 
 function closeNav(){
   sidebar.style.width = '0px';
   adminWrapper.className = 'col-md-0 admin-wrapper';
   adminContent.className = 'col-md-12 admin-content';
+  adminContainer.style.paddingLeft = '0px'
 }
 
 function toggleNav(){
