--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -25,11 +25,11 @@
       <table class="table table-striped table-hover posts-table">
         <thead>
           <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Title</th>
-            <th scope="col">Category</th>
-            <th scope="col">Posted on</th>
-            <th scope="col">Last updated on</th>
+            <th><%= sort_link @q, :id%></th>
+            <th><%= sort_link @q, :title%></th>
+            <th><%= sort_link @q, :category_name, 'Category'%></th>
+            <th><%= sort_link @q, :created_at, 'Posted on'%></th>
+            <th><%= sort_link @q, :updated_at, 'Last updated on'%></th>
             <th scope = 'col'>Actions</th>
           </tr>
         </thead>
