--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -21,8 +21,23 @@
     </div>
     <!-- Content -->
     <div class="col-md-11 admin-content" id = 'admin-content'>
-      <!-- Table -->
-      <table class="table table-striped table-hover posts-table">
+      <!-- Tab Panels -->
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
+      <!-- Table for Publised Posts-->
+      <table class="table table-striped table-hover posts-table" id = 'publised_posts'>
         <thead>
           <tr>
             <th><%= sort_link @q, :id%></th>
@@ -46,7 +61,62 @@
               <%= link_to 'Delete',admin_post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
             </td>
           </tr>
-
+          <% end %>
+        </tbody>
+      </table>
+      <!-- Table for Draft Posts -->
+      <table class="table table-striped table-hover posts-table" id = 'draft_posts'>
+        <thead>
+          <tr>
+            <th><%= sort_link @q, :id%></th>
+            <th><%= sort_link @q, :title%></th>
+            <th><%= sort_link @q, :category_name, 'Category'%></th>
+            <th><%= sort_link @q, :created_at, 'Posted on'%></th>
+            <th><%= sort_link @q, :updated_at, 'Last updated on'%></th>
+            <th scope = 'col'>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @draft_posts.each do |post| %>
+          <tr>
+            <td><%= post.id %></td>
+            <td><%= link_to post.title, post_path(post) %></td>
+            <td><%= post.category_name %></td>
+            <td><%= post.created_at.strftime("%Y/%m/%d") %></td>
+            <td><%= post.updated_at.strftime("%Y/%m/%d") %></td>
+            <td>
+              <%= link_to 'Edit', edit_admin_post_path(post) %>
+              <%= link_to 'Delete',admin_post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
+            </td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <!-- Table for Private Posts -->
+      <table class="table table-striped table-hover posts-table" id = 'private_posts'>
+        <thead>
+          <tr>
+            <th><%= sort_link @q, :id%></th>
+            <th><%= sort_link @q, :title%></th>
+            <th><%= sort_link @q, :category_name, 'Category'%></th>
+            <th><%= sort_link @q, :created_at, 'Posted on'%></th>
+            <th><%= sort_link @q, :updated_at, 'Last updated on'%></th>
+            <th scope = 'col'>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @private_posts.each do |post| %>
+          <tr>
+            <td><%= post.id %></td>
+            <td><%= link_to post.title, post_path(post) %></td>
+            <td><%= post.category_name %></td>
+            <td><%= post.created_at.strftime("%Y/%m/%d") %></td>
+            <td><%= post.updated_at.strftime("%Y/%m/%d") %></td>
+            <td>
+              <%= link_to 'Edit', edit_admin_post_path(post) %>
+              <%= link_to 'Delete',admin_post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
+            </td>
+          </tr>
           <% end %>
         </tbody>
       </table>
@@ -55,6 +125,7 @@
 </div>
 
 <script>
+/////////TOGGLE SIDEBAR//////////////////////////////
 let sidebar = document.getElementById('admin-sidebar')
 let adminWrapper = document.getElementById('admin-wrapper')
 let adminContent = document.getElementById('admin-content')
@@ -80,5 +151,14 @@ function toggleNav(){
   }else{
     closeNav()
   }
+}
+
+/////////////////TAB PANELS/////////////////////////////////////
+let table1 = document.getElementById('publised_posts')
+let table2 = document.getElementById('draft_posts')
+let table3 = document.getElementById('private_posts')
+
+function changePanel(arg1, arg2, arg3){
+
 }
 </script>
