Enable sorting action by status

--- a/app/assets/stylesheets/_admin.scss
+++ b/app/assets/stylesheets/_admin.scss
@@ -52,6 +52,13 @@
        border-radius: 5px;
      }
    }
+   .admin-btn-list {
+     margin-top: 20px;
+     li {
+       display: inline-block;
+       margin:10px;
+     }
+   }
 }
 
 //Sidebar
