added category and recent posts;

--- a/app/assets/stylesheets/_side.scss
+++ b/app/assets/stylesheets/_side.scss
@@ -33,3 +33,16 @@
   border: solid 2px #fff;
   border-radius: 100px;
 }
+////Category
+#category-header {
+  background-color: #fff;
+}
+///Recent Posts
+.recent-posts {
+  #posts-header {
+    background-color: #fff;
+  }
+  li {
+    list-style: none;
+  }
+}
