--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -5,8 +5,10 @@
   border-bottom: solid 1px #efefef;
   background-color: #fff;
   .navbar-brand{
+    color: #444;
     margin: 15px;
     margin-left: 100px;
+    margin-top: 25px;
     float: left;
   }
   .link-list {
