--- a/app/views/posts/_nav.html.erb
+++ b/app/views/posts/_nav.html.erb
@@ -1,12 +1,9 @@
 <nav class="navbar fixed-top">
-  <h3 class="navbar-brand">My Blog</h3>
+  <h3><%= link_to 'My Blog', root_path, class:"navbar-brand" %></h3>
     <ul class="link-list">
       <li class = 'nav-item'><%= link_to 'Home', root_path %></li>
       <% if user_signed_in? %>
-        <li class = 'nav-item'><%= link_to 'Logout as admin', destroy_user_session_path, method: :delete %></li>
+        <li class = 'nav-item'><%= link_to 'Admin Home', admin_posts_path %></li>
       <% end %>
-      <li class = 'nav-item'><%=link_to 'New', new_admin_post_path%></li>
-      <!-- <li class = 'nav-item'><Link to = '/About' >About</Link></li> -->
-      <!-- <li class = 'nav-item'><Link to = '/Contact' >Contact</Link></li> -->
     </ul>
 </nav>
