--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -1,77 +1,13 @@
 .navbar {
-  top: 0;
-  height:  60px;
-  width: 100%;
-  border-bottom: solid 1px #efefef;
-  background-color: #fff;
-  .navbar-brand{
-    color: #444;
-    margin: 15px;
-    margin-left: 100px;
-    margin-top: 25px;
-    float: left;
-  }
-  #home-menu-icon {
-    position: absolute;
-    cursor: pointer;
-    top: 20px;
-    right: 120px;
-    .home-menu-icon-bar {
-      width: 30px;
-      height: 3px;
-      background-color: #444;
-      margin: 4px 0;
-      border-radius: 5px;
-    }
-  }
-}
-.navbar-side {
   height: 100%;
-  width: 25%;
+  width: 250px;
   position: fixed;
-  top: 0;
-  right: 0;
-  padding: 0;
-  list-style: none;
-  border-left: 1px solid #EFEFEF;
-  background-color: #fff;
-  overflow-y: scroll;
-  z-index: 2000;
-  -webkit-transform: translateX(100%);
-  -ms-transform: translateX(100%);
-  transform: translateX(100%);
-  -webkit-transition: 300ms ease;
-  transition: 300ms ease;
-}
-
-.navbar-side-item {
- padding: 1.5rem 0;
- margin: 0;
- border-bottom: 1px solid #EFEFEF;
- height: 5rem;
-}
-
-.side-link {
- padding-left: 2rem;
-}
-
-.reveal {
-  -webkit-transform: translateX(0%);
-  -ms-transform: translateX(0%);
-  transform: translateX(0%);
-  -webkit-transition: 300ms ease;
-  transition: 300ms ease;
-}
-
-#overlay {
-  position: fixed;
-  display: none;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  cursor: pointer;
-  background-color: #ccc;
-  opacity: 0.6;
-  z-index: 990;
+  padding: 0;
+  margin:0;
+  list-style: none;
+  border-right: 1px solid #EFEFEF;
+  background-color: #fff;
+  overflow-y: scroll;
 }
