--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,7 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- // *= require_tree .
+ *= require 'masonry/transitions'
  *= require_self
  */
  @import "bootstrap";
@@ -19,8 +19,8 @@
  @import "navbar";
  @import "footer";
  @import "show";
- @import "postbox";
  @import "side";
  @import "form";
  @import "admin";
  @import "admin_content";
+ @import "post-index";
