--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -1,3 +1,5 @@
+@import "global";
+
 .navbar {
   height: 100%;
   width: 250px;
@@ -10,4 +12,120 @@
   border-right: 1px solid #EFEFEF;
   background-color: #fff;
   overflow-y: scroll;
+  letter-spacing: 2px;
+  padding: 15px 15px 15px 30px;
+  .nav-intro {
+    position: absolute;
+    top: 40px;
+    .intro-body {
+      color: #B8BEC1;
+      font-size: 15px;
+      letter-spacing: 1px;
+    }
+  }
+  .navbrand {
+    color: $theme-color;
+    text-decoration: none;
+  }
+}
+.admin-btn {
+  position: absolute;
+  bottom: 50px;
+  left: 30px;
+}
+
+// Search Box
+.search-box {
+  position: absolute;
+  top:150px;
+  left: 20px;
+}
+.search-bar {
+  border: none;
+  border-radius: 0;
+  border-bottom: solid 2px $theme-color;
+}
+.search-bar::placeholder{
+  color:#B8BEC1;
+}
+
+.search-bar:focus{
+  outline: none;
+  outline-style:none;
+  box-shadow:none;
+  border-color: #BFEE90;
+  transition: 1s;
+}
+
+.link-list {
+  position: absolute;
+  top: 220px;
+  left: -10px;
+  ul {
+    list-style: none;
+     li {
+       margin: 0;
+       cursor: pointer;
+       margin-bottom: 20px;
+     }
+  }
+}
+
+//Category Box
+.category-box {
+  border: solid 1px #EFEFEF;
+  .category-item {
+    color: #181818;
+    text-decoration: none;
+  }
+}
+
+//Recent posts box
+.recent-posts-box {
+  display: none;
+  position: absolute;
+  top: 350px;
+  left: 20px;
+  .post-item {
+    color: #181818;
+    text-decoration: none;
+  }
+}
+
+//Modal
+.modal {
+    // display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    width: 80%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
