--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,6 +16,7 @@
           <% end %> <!-- of IF2-->
         <% end %> <!-- of IF1-->
       </div>
+      <%= paginate @posts %>
     </div>
   </div>
 </div>
