--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
       <%= render 'nav' %>
     </div>
     <!-- Main Content  -->
-    <div class="col-md-10">
+    <div class="col-md-10 post-contailer">
       <div id="posts" class="transitions-enabled">
         <!-- POST IF -->
         <% if (@posts) %><!-- IF1 -->
@@ -16,7 +16,10 @@
           <% end %> <!-- of IF2-->
         <% end %> <!-- of IF1-->
       </div>
-      <%= paginate @posts %>
+      <div class="pagination">
+        <%= link_to_prev_page @posts, 'Previous Page', class: 'page-link' %>
+        <%= link_to_next_page @posts, 'Next Page', class: 'page-link' %>
+      </div>
     </div>
   </div>
 </div>
