show-page/highlighting

--- a/app/assets/stylesheets/_post-index.scss
+++ b/app/assets/stylesheets/_post-index.scss
@@ -1,5 +1,8 @@
 @import "global";
 
+.post-container {
+  margin-top: 25px;
+}
 #posts {
   margin: 0 auto;
   width: 100%;
@@ -8,6 +11,24 @@
 	  width: 350px;
 	  border-radius: 7px;
 	  text-align: center;
+    .post-title {
+      color: #21252A;
+      font-size: 20px;
+      margin: 0;
+      padding: 0;
+      text-decoration: none;
+    }
+    .post-title:hover {
+      color: $p-color;
+    }
+    .btn-outline-info {
+      color: $theme-color;
+      border-color: $theme-color;
+    }
+    .btn-outline-info:hover {
+      color: #fff;
+      background-color: $theme-color;
+    }
 	  img {
 	  	max-width: 100%;
 	  	height: auto;
@@ -25,5 +46,15 @@
     color: $theme-color;
     border-radius: 5px;
     padding: 10px;
+  }
+}
+
+
+/////////////SHOW PAGE///////////////
+.show-container {
+  padding: 15px 100px 15px 150px;
+  .post-created-on {
+    color: #A9A9A9;
+    letter-spacing: 1px;
   }
 }
