--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class ="container-fluid">
+<div class ="post-container">
   <div class = 'row'>
     <!-- SIDE-NAV -->
     <div class="col-md-2">
@@ -28,6 +28,6 @@
 //Box FadeIn
 $(".box").each(function(index) {
   $('.box').css('display', 'none');
-  $(this).delay(300*index).fadeIn(200);
+  $(this).delay(200*index).fadeIn(100);
 });
 </script>
