Added side bars

--- a/app/assets/stylesheets/_post-index.scss
+++ b/app/assets/stylesheets/_post-index.scss
@@ -55,6 +55,7 @@
   padding: 15px 100px 15px 150px;
   .post-created-on {
     color: #A9A9A9;
+    font-weight: lighter;
     letter-spacing: 1px;
   }
 }
