--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -70,62 +70,91 @@
      }
   }
 }
-
-//Category Box
-.category-box {
-  border: solid 1px #EFEFEF;
-  .category-item {
-    color: #181818;
-    text-decoration: none;
-  }
+///////////SIDE BAR/////////////////////
+.navbar-side {
+  height: 100%;
+  width: 20%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 0;
+  list-style: none;
+  border-left: 1px solid #EFEFEF;
+  background: rgba(0, 0, 0, 0.9);
+  overflow-y: scroll;
+  z-index: 2000;
+  -webkit-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  transform: translateX(100%);
+  -webkit-transition: 300ms ease;
+  transition: 300ms ease;
 }
 
-//Recent posts box
-.recent-posts-box {
+.navbar-side2 {
+  @extend .navbar-side;
+  width: 40%;
+  background: #fff;
+}
+
+.navbar-side-item {
+ padding: 1.5rem 0;
+ font-size: 19px;
+ text-align: center;
+ border-bottom: 1px solid #EFEFEF;
+ height: 5rem;
+}
+
+.reveal {
+  -webkit-transform: translateX(0%);
+  -ms-transform: translateX(0%);
+  transform: translateX(0%);
+  -webkit-transition: 300ms ease;
+  transition: 300ms ease;
+}
+
+#overlay {
+  position: fixed;
   display: none;
-  position: absolute;
-  top: 350px;
-  left: 20px;
-  .post-item {
-    color: #181818;
-    text-decoration: none;
-  }
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  cursor: pointer;
+  background-color: #ccc;
+  opacity: 0.6;
+  z-index: 990;
 }
 
-//Modal
-.modal {
-    // display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+/////////////CATEGORY COLORS///////////////
+.category-link {
+  text-decoration: none;
 }
 
-/* Modal Content */
-.modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    width: 80%;
+.recent-post-item {
+  color: #212542;
 }
 
-/* The Close Button */
-.close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+.category-name:hover {
+  color: #fff;
+  text-decoration: none;
 }
 
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
+.Ruby {
+  color: #C12214;
+}
+
+.Go {
+  color: #74CDDD;
+}
+
+.Javascript {
+  color: #F5DE1A;
+}
+
+.React {
+  color: #06D9FE;
+}
+
+.Life {
+  color: #80F222;
 }
