--- a/app/views/posts/_nav.html.erb
+++ b/app/views/posts/_nav.html.erb
@@ -11,6 +11,7 @@
     <% @recent_posts.each do |post| %>
      <li class = "navbar-side-item"><%= link_to post.title, post_path(post), class: 'recent-post-item' %></li>
     <% end %>
+    <%= image_tag("https://pbs.twimg.com/media/DeMEs8WU8AAuGXA.jpg",class:"user-image") %>
   </ul>
 <!-- MAIN NAV -->
 <nav class = "navbar">
