--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -2,6 +2,11 @@ $p-color: #E0E0E0;
 $p2-color: #EEEEEE;
 $h-color: #444;
 $a-color: #666;
+$Ruby: #C12214;
+$Go: #74CDDD;
+$Javascript:#F5DE1A;
+$React:#06D9FE;
+$Life:#80F222;
 $theme-color: #20AD9F;
 
 body{
